TestSuite/errors/err0387.pas
type
  T1 = partial class a: integer; end;
  
  T1 = partial sealed class end;
  
begin
 
end.